--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,56 @@ div.text-holder button {
   font-size: 1.2rem;
 }
 
+.menu-content,
+.on {
+  padding: 2rem 1rem;
+  position: fixed;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 16rem;
+  background-color: rgb(255 255 255);
+}
+
+.menu-div-mobile,
+.on {
+  position: fixed;
+  right: 16rem;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0 0 0 / 60%);
+}
+
+.button-holder-mobile {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.login-b,
+.reg-b {
+  flex-basis: 100%;
+  font-size: 1rem;
+}
+
+.login-b {
+  color: hsl(0deg, 0%, 41%);
+  font-size: 1.2;
+  border: none;
+  background-color: transparent;
+  padding: 1rem;
+}
+
+.reg-b {
+  color: hsl(0deg, 0%, 41%);
+  font-size: 1.2;
+  border: solid 1px hsl(0deg, 0%, 41%);
+  background-color: transparent;
+  padding: 0.8rem;
+  border-radius: 15px;
+}
+
 @media screen and (min-width: 756px) {
   .container {
     width: 100%;
