--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ div.text-holder button {
   background-color: rgb(0 0 0 / 60%);
 }
 
+.p-menu {
+  font-size: 1.2rem;
+}
+
 .button-holder-mobile {
   display: flex;
   flex-wrap: wrap;
@@ -70,7 +74,7 @@ div.text-holder button {
 .login-b,
 .reg-b {
   flex-basis: 100%;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .login-b {
@@ -92,6 +96,18 @@ div.text-holder button {
 
 .p-holder {
   padding: 4rem 1rem;
+}
+
+.features-mobile-click {
+  cursor: pointer;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-block {
+  display: block;
 }
 
 @media screen and (min-width: 756px) {
